src/test/ui/dst/dst-index.nll.stderr
error[E0161]: cannot move a value of type str: the size of str cannot be statically determined
  --> $DIR/dst-index.rs:31:5
   |
LL |     S[0];
   |     ^^^^

error[E0161]: cannot move a value of type dyn std::fmt::Debug: the size of dyn std::fmt::Debug cannot be statically determined
  --> $DIR/dst-index.rs:34:5
   |
LL |     T[0];
   |     ^^^^

error[E0507]: cannot move out of borrowed content
  --> $DIR/dst-index.rs:31:5
   |
LL |     S[0];
   |     ^^^^ cannot move out of borrowed content

error[E0507]: cannot move out of borrowed content
  --> $DIR/dst-index.rs:34:5
   |
LL |     T[0];
   |     ^^^^ cannot move out of borrowed content

error: aborting due to 4 previous errors

Some errors occurred: E0161, E0507.
For more information about an error, try `rustc --explain E0161`.
